# Triglav

./: AUTHORS.md  ChangeLog  MCast.java  Makefile.am  NEWS.md  README.md  adl.c  algorithm.c  algorithm.h  api-example.c  api-example.php  api-example.py  api.c  bench_block.h  configure.ac  example.conf  findnonce.c  miner.h  miner.php  ocl.c  pool.c  sgminer.c  triglav.c  util.c  util.h  vcrypt.c  vcrypt.h
doc/: API  BUGS.md  FAQ.md  GPU  MINING.md  configuration.md  cygwin-build.txt  windows-build.txt
kernel/: alexkarnew.cl  alexkarold.cl  bufius.cl  ckolivas.cl  psw.cl  zuikkis.cl
winbuild/: README.txt  triglav.sln  triglav.vcxproj  triglav.vcxproj.filters
